Fix text alignment

--- a/docs/dynamic_sheets/dragonage/0.1/sheet.css
+++ b/docs/dynamic_sheets/dragonage/0.1/sheet.css
@@ -74,7 +74,7 @@
   width: 100%;
   height: 1.1em;
   font-weight: bold;
-  text-align: left;
+  text-align: center;
   font-family: 'Cinzel', serif;
   font-size: larger;
   color: white;
@@ -89,7 +89,7 @@
   color: white;
   font-size: medium;
   font-weight: normal;
-  text-align: center;
+  text-align: left;
   padding-top: 2px;
   overflow: hidden;
 }
@@ -540,7 +540,8 @@
   width: 165px;
 }
 
-.ds_dragonage .melee_weapons .weapon_group_header {
+.ds_dragonage .melee_weapons div.weapon_group_header {
+  text-align: center;
   width: 100%;
 }
 .ds_dragonage .da_section .da_content .weapon_groups {
